--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,15 +1,18 @@
-.demo-app{
-    height:100vh;
-    display:flex;
-    flex-direction: column;
-    line-height:1.5;
-    .demo-app-header{
-        padding:30px;
-        border-bottom:1px solid @black;
-    }
-    .demo-app-footer{
-        padding:30px;
-        border-top:1px solid @black;
-        text-align: center;
-    }
+.demo-app {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  .demo-app-header {
+    padding: 20px;
+    border-bottom: 1px solid @black;
+    font-size: 24px;
+    font-weight: 600;
+  }
+  .demo-app-footer {
+    padding: 20px;
+    border-top: 1px solid @black;
+    text-align: center;
+    font-style: italic;
+    line-height: 1.5;
+  }
 }
