feat: complete all functions

--- a/src/pages/Landing/index.less
+++ b/src/pages/Landing/index.less
@@ -3,19 +3,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   .landing-page-center {
     text-align: center;
+
     .title {
       font-size: 46px;
       font-weight: 500;
       line-height: 1.2;
     }
+
     .center {
       padding: 24px 0;
     }
+
     .enter-btn {
+      .common-btn();
       padding: 14px 20px;
-      border: 1px solid @black;
+      margin: 0 auto;
       font-size: 18px;
     }
   }
